--- a/lib/css/global.css
+++ b/lib/css/global.css
@@ -107,7 +107,7 @@ p.reverse, span.reverse {
 }
 
 body {
-  background: #222222 top center/35% repeat url("/lib/imgs/bgPattern.png");
+  background: #222222 top center/35% repeat url("../../lib/imgs/bgPattern.png");
 }
 
 .set-title {
