--- a/lib/scss/_body.scss
+++ b/lib/scss/_body.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 
 body{
-    background: $black top center/35% repeat url("/lib/imgs/bgPattern.png");
+    background: $black top center/35% repeat url("../../lib/imgs/bgPattern.png");
 }
 .set-title{
     border-bottom: 2px solid $blue;
