--- a/lib/scss/_header.scss
+++ b/lib/scss/_header.scss
@@ -27,4 +27,13 @@
             position: relative;
         }
     }
+
+    @include tabletAndBelow{
+        box-shadow: 0 10px 10px $pureBlack;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 100;
+    }
+
 }
