--- a/lib/scss/_setCards.scss
+++ b/lib/scss/_setCards.scss
@@ -30,7 +30,7 @@
                 background-color: $green;
                 color: $black;
                 font-size: 14px;
-                @include GeoUltra();
+                @include notoBlack();
             }
         }
 
