--- a/lib/scss/_variables.scss
+++ b/lib/scss/_variables.scss
@@ -1,9 +1,12 @@
 $black: #222222;
+$pureBlack: #000000;
 $blue: #78bbf6;
 $blueGray: #282f3d;
 $green: #77dd77;
 $pink: #de78ab;
 $white: #f6f6f6;
+
+$noto: 'Noto Sans', 'Arial', sans-serif;
 
 $desktopWidth: 1440px;
 $mobileWidth: 750px;
