--- a/lib/css/global.css
+++ b/lib/css/global.css
@@ -94,14 +94,12 @@ p.reverse, span.reverse {
     position: relative;
   }
 }
-@media (max-width: 1199px) {
-  .header {
-    box-shadow: 0 10px 10px #000000;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 100;
-  }
+.header.sticky {
+  box-shadow: 0 10px 10px #000000;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 }
 
 body {
