--- a/lib/scss/_cardList.scss
+++ b/lib/scss/_cardList.scss
@@ -4,7 +4,6 @@
 .set-info{
     background: $white;
     background: linear-gradient(0deg, rgba(170,170,170,1) 0%, rgba(246,246,246,1) 50%);
-    border:1px solid $green;
     border-radius: 8px;
     padding: 8px 0;
     .set-details{
@@ -22,14 +21,17 @@
     padding: 8px 4px;
 }
 .card-list{
-    background-color: $black;
-    border: 1px solid $pink;
+    background-color: $blueGray;
+    border: 1px solid $blue;
     border-radius: 8px;
     padding: 16px;
     .card-container{
         .card{
             background: transparent;
-            padding: 8px;
+            padding: 4px;
+            @include tabletAndBelow{
+                padding: 0;
+            }
             img[type='button']{
                 background-color: transparent;
                 border: none;
@@ -40,7 +42,7 @@
         .card-info{
             font-size: 14px;
             letter-spacing: .75px;
-            padding-bottom: 8px;
+            padding-bottom: 4px;
             &:last-child{
                 padding-bottom: 0;
             }
@@ -54,10 +56,13 @@
                 }
             }
             .card-name{
-                font-size: 18px;
-                text-overflow: ellipsis;
+                font-size: 16px;
                 overflow: hidden;
+                text-overflow: ellipsis;
                 white-space: nowrap;
+                @include tabletAndBelow{
+                    font-size: 14px;
+                }
             }
             .card-number{
                 @include notoSemiBold();
