--- a/lib/scss/_cardModal.scss
+++ b/lib/scss/_cardModal.scss
@@ -16,11 +16,29 @@
                 }
             }
             .modal-body{
-                img{
-                    width: 100%;
-                }
                 p{
                     padding: 0;
+                }
+                .modal-title{
+                    color: $blue;
+                    font-size: 42px;
+                    text-transform: uppercase;
+                    @include notoBlack();
+                }
+                .modal-card-number{
+                    color: $pink;
+                    font-size: 16px;
+                    @include notoReg();
+                    img{
+                        margin-right: 16px;
+                    }
+                }
+                .modal-card-artist{
+                    @include notoLight();
+                    span{
+                        @include notoSemiBold();
+                        margin-left: 8px;
+                    }
                 }
             }
         }
