--- a/lib/css/global.css
+++ b/lib/css/global.css
@@ -230,6 +230,22 @@ body.modal-open {
   width: 16px;
 }
 
+.set-progress {
+  background-color: #222222;
+  background: linear-gradient(0deg, rgb(34, 34, 34) 0%, rgb(51, 51, 51) 100%);
+  border: 1px solid #de78ab;
+  border-radius: 8px;
+  padding: 8px;
+}
+.set-progress .progress {
+  border-radius: 4px;
+  height: 8px;
+}
+.set-progress .progress .progress-bar {
+  background-color: #77dd77;
+  background: linear-gradient(0deg, rgb(119, 221, 119) 40%, rgb(151, 255, 151) 60%);
+}
+
 .card-details {
   padding: 8px 4px;
 }
@@ -254,6 +270,35 @@ body.modal-open {
   border: none;
   outline: none;
   padding: 0;
+}
+.card-list .card-container .card .card-check {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 4px 8px;
+}
+.card-list .card-container .card .card-check input {
+  background: rgba(34, 34, 34, 0.75);
+  background-image: none;
+  border: 1px solid #f6f6f6;
+  padding: 12px;
+  outline: none;
+}
+.card-list .card-container .card .card-check input:checked {
+  background-color: #78bbf6;
+  border-color: #222222;
+}
+.card-list .card-container .card .card-check input:checked::after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #222222;
+  content: "\f00c";
+  position: relative;
+  left: -8px;
+  bottom: 8px;
+}
+.card-list .card-container .card .card-check input:focus, .card-list .card-container .card .card-check input:active {
+  box-shadow: none;
 }
 .card-list .card-container .card-info {
   font-size: 14px;
