--- a/lib/css/global.css
+++ b/lib/css/global.css
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5, h6,
 p, span {
   color: #f6f6f6;
   letter-spacing: normal;
-  line-height: 1 !important;
+  line-height: normal !important;
   font-family: "Noto Sans", "Arial", sans-serif;
   font-weight: 400;
 }
@@ -254,7 +254,12 @@ body.modal-open {
   background-color: #282f3d;
   border: 1px solid #78bbf6;
   border-radius: 8px;
-  padding: 16px;
+}
+@media (max-width: 1199px) {
+  .card-list {
+    border: none;
+    background-color: transparent;
+  }
 }
 .card-list .card-container .card {
   background: transparent;
