--- a/lib/scss/_typography.scss
+++ b/lib/scss/_typography.scss
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6,
 p, span{
     color: $white;
     letter-spacing: normal;
-    line-height: 1!important;
+    line-height: normal!important;
     @include notoReg();
 
     &.reverse{
